--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
@@ -201,8 +201,8 @@ theorem term_derivation_neg_product : true := by sorry
 -- NegExponential
 theorem term_derivation_neg_exponential : true := by sorry
 
--- AtomAddSwap
-theorem term_derivation_atom_add_swap : true := by sorry
+-- AtomAddNonZeroLiteral
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -484,8 +484,8 @@ theorem term_derivation_neg_product : true := by sorry
 -- NegExponential
 theorem term_derivation_neg_exponential : true := by sorry
 
--- AtomAddSwap
-theorem term_derivation_atom_add_swap : true := by sorry
+-- AtomAddNonZeroLiteral
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -873,8 +873,8 @@ theorem term_derivation_neg_product : true := by sorry
 -- NegExponential
 theorem term_derivation_neg_exponential : true := by sorry
 
--- AtomAddSwap
-theorem term_derivation_atom_add_swap : true := by sorry
+-- AtomAddNonZeroLiteral
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -1422,8 +1422,8 @@ theorem term_derivation_neg_product : true := by sorry
 -- NegExponential
 theorem term_derivation_neg_exponential : true := by sorry
 
--- AtomAddSwap
-theorem term_derivation_atom_add_swap : true := by sorry
+-- AtomAddNonZeroLiteral
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -1720,8 +1720,8 @@ theorem term_derivation_neg_product : true := by sorry
 -- NegExponential
 theorem term_derivation_neg_exponential : true := by sorry
 
--- AtomAddSwap
-theorem term_derivation_atom_add_swap : true := by sorry
+-- AtomAddNonZeroLiteral
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
