--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
@@ -198,8 +198,8 @@ theorem term_derivation_neg_product : true := by sorry
 -- NegExponential
 theorem term_derivation_neg_exponential : true := by sorry
 
--- AtomAddSwap
-theorem term_derivation_atom_add_swap : true := by sorry
+-- AtomAddNonZeroLiteral
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -474,8 +474,8 @@ theorem term_derivation_neg_product : true := by sorry
 -- NegExponential
 theorem term_derivation_neg_exponential : true := by sorry
 
--- AtomAddSwap
-theorem term_derivation_atom_add_swap : true := by sorry
+-- AtomAddNonZeroLiteral
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -751,8 +751,8 @@ theorem term_derivation_neg_product : true := by sorry
 -- NegExponential
 theorem term_derivation_neg_exponential : true := by sorry
 
--- AtomAddSwap
-theorem term_derivation_atom_add_swap : true := by sorry
+-- AtomAddNonZeroLiteral
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -1033,8 +1033,8 @@ theorem term_derivation_neg_product : true := by sorry
 -- NegExponential
 theorem term_derivation_neg_exponential : true := by sorry
 
--- AtomAddSwap
-theorem term_derivation_atom_add_swap : true := by sorry
+-- AtomAddNonZeroLiteral
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -1393,8 +1393,8 @@ theorem term_derivation_neg_product : true := by sorry
 -- NegExponential
 theorem term_derivation_neg_exponential : true := by sorry
 
--- AtomAddSwap
-theorem term_derivation_atom_add_swap : true := by sorry
+-- AtomAddNonZeroLiteral
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -1678,8 +1678,8 @@ theorem term_derivation_neg_product : true := by sorry
 -- NegExponential
 theorem term_derivation_neg_exponential : true := by sorry
 
--- AtomAddSwap
-theorem term_derivation_atom_add_swap : true := by sorry
+-- AtomAddNonZeroLiteral
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -1975,8 +1975,8 @@ theorem term_derivation_neg_product : true := by sorry
 -- NegExponential
 theorem term_derivation_neg_exponential : true := by sorry
 
--- AtomAddSwap
-theorem term_derivation_atom_add_swap : true := by sorry
+-- AtomAddNonZeroLiteral
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -2294,8 +2294,8 @@ theorem term_derivation_neg_product : true := by sorry
 -- NegExponential
 theorem term_derivation_neg_exponential : true := by sorry
 
--- AtomAddSwap
-theorem term_derivation_atom_add_swap : true := by sorry
+-- AtomAddNonZeroLiteral
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -2676,8 +2676,8 @@ theorem term_derivation_neg_product : true := by sorry
 -- NegExponential
 theorem term_derivation_neg_exponential : true := by sorry
 
--- AtomAddSwap
-theorem term_derivation_atom_add_swap : true := by sorry
+-- AtomAddNonZeroLiteral
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
