--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
@@ -202,7 +202,7 @@ theorem term_derivation_neg_product : true := by sorry
 theorem term_derivation_neg_exponential : true := by sorry
 
 -- AtomAddNonZeroLiteral
-theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a^1 := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -485,7 +485,7 @@ theorem term_derivation_neg_product : true := by sorry
 theorem term_derivation_neg_exponential : true := by sorry
 
 -- AtomAddNonZeroLiteral
-theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a^1 := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -874,7 +874,7 @@ theorem term_derivation_neg_product : true := by sorry
 theorem term_derivation_neg_exponential : true := by sorry
 
 -- AtomAddNonZeroLiteral
-theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a^1 := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -1423,7 +1423,7 @@ theorem term_derivation_neg_product : true := by sorry
 theorem term_derivation_neg_exponential : true := by sorry
 
 -- AtomAddNonZeroLiteral
-theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a^1 := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -1721,7 +1721,7 @@ theorem term_derivation_neg_product : true := by sorry
 theorem term_derivation_neg_exponential : true := by sorry
 
 -- AtomAddNonZeroLiteral
-theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a^1 := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
