--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
@@ -199,7 +199,7 @@ theorem term_derivation_neg_product : true := by sorry
 theorem term_derivation_neg_exponential : true := by sorry
 
 -- AtomAddNonZeroLiteral
-theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a^1 := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -475,7 +475,7 @@ theorem term_derivation_neg_product : true := by sorry
 theorem term_derivation_neg_exponential : true := by sorry
 
 -- AtomAddNonZeroLiteral
-theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a^1 := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -752,7 +752,7 @@ theorem term_derivation_neg_product : true := by sorry
 theorem term_derivation_neg_exponential : true := by sorry
 
 -- AtomAddNonZeroLiteral
-theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a^1 := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -1034,7 +1034,7 @@ theorem term_derivation_neg_product : true := by sorry
 theorem term_derivation_neg_exponential : true := by sorry
 
 -- AtomAddNonZeroLiteral
-theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a^1 := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -1394,7 +1394,7 @@ theorem term_derivation_neg_product : true := by sorry
 theorem term_derivation_neg_exponential : true := by sorry
 
 -- AtomAddNonZeroLiteral
-theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a^1 := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -1679,7 +1679,7 @@ theorem term_derivation_neg_product : true := by sorry
 theorem term_derivation_neg_exponential : true := by sorry
 
 -- AtomAddNonZeroLiteral
-theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a^1 := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -1976,7 +1976,7 @@ theorem term_derivation_neg_product : true := by sorry
 theorem term_derivation_neg_exponential : true := by sorry
 
 -- AtomAddNonZeroLiteral
-theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a^1 := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -2295,7 +2295,7 @@ theorem term_derivation_neg_product : true := by sorry
 theorem term_derivation_neg_exponential : true := by sorry
 
 -- AtomAddNonZeroLiteral
-theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a^1 := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -2677,7 +2677,7 @@ theorem term_derivation_neg_product : true := by sorry
 theorem term_derivation_neg_exponential : true := by sorry
 
 -- AtomAddNonZeroLiteral
-theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a := by ring
+theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a^1 := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
