--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
@@ -199,7 +199,8 @@ theorem term_derivation_neg_product : true := by sorry
 theorem term_derivation_neg_exponential : true := by sorry
 
 -- AtomAddNonZeroLiteral
-theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a^1 := by ring
+theorem term_derivation_atom_add_non_zero_literal {α} {a c : α} [CommRing α] : 
+  a + c = c + 1 * a^1 := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -475,7 +476,8 @@ theorem term_derivation_neg_product : true := by sorry
 theorem term_derivation_neg_exponential : true := by sorry
 
 -- AtomAddNonZeroLiteral
-theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a^1 := by ring
+theorem term_derivation_atom_add_non_zero_literal {α} {a c : α} [CommRing α] : 
+  a + c = c + 1 * a^1 := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -752,7 +754,8 @@ theorem term_derivation_neg_product : true := by sorry
 theorem term_derivation_neg_exponential : true := by sorry
 
 -- AtomAddNonZeroLiteral
-theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a^1 := by ring
+theorem term_derivation_atom_add_non_zero_literal {α} {a c : α} [CommRing α] : 
+  a + c = c + 1 * a^1 := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -1034,7 +1037,8 @@ theorem term_derivation_neg_product : true := by sorry
 theorem term_derivation_neg_exponential : true := by sorry
 
 -- AtomAddNonZeroLiteral
-theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a^1 := by ring
+theorem term_derivation_atom_add_non_zero_literal {α} {a c : α} [CommRing α] : 
+  a + c = c + 1 * a^1 := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -1394,7 +1398,8 @@ theorem term_derivation_neg_product : true := by sorry
 theorem term_derivation_neg_exponential : true := by sorry
 
 -- AtomAddNonZeroLiteral
-theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a^1 := by ring
+theorem term_derivation_atom_add_non_zero_literal {α} {a c : α} [CommRing α] : 
+  a + c = c + 1 * a^1 := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -1679,7 +1684,8 @@ theorem term_derivation_neg_product : true := by sorry
 theorem term_derivation_neg_exponential : true := by sorry
 
 -- AtomAddNonZeroLiteral
-theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a^1 := by ring
+theorem term_derivation_atom_add_non_zero_literal {α} {a c : α} [CommRing α] : 
+  a + c = c + 1 * a^1 := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -1976,7 +1982,8 @@ theorem term_derivation_neg_product : true := by sorry
 theorem term_derivation_neg_exponential : true := by sorry
 
 -- AtomAddNonZeroLiteral
-theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a^1 := by ring
+theorem term_derivation_atom_add_non_zero_literal {α} {a c : α} [CommRing α] : 
+  a + c = c + 1 * a^1 := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -2295,7 +2302,8 @@ theorem term_derivation_neg_product : true := by sorry
 theorem term_derivation_neg_exponential : true := by sorry
 
 -- AtomAddNonZeroLiteral
-theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a^1 := by ring
+theorem term_derivation_atom_add_non_zero_literal {α} {a c : α} [CommRing α] : 
+  a + c = c + 1 * a^1 := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
@@ -2677,7 +2685,8 @@ theorem term_derivation_neg_product : true := by sorry
 theorem term_derivation_neg_exponential : true := by sorry
 
 -- AtomAddNonZeroLiteral
-theorem term_derivation_atom_add_non_zero_literal { α } { a : α } { c : α } [CommRing α] : a + c = c + 1 * a^1 := by ring
+theorem term_derivation_atom_add_non_zero_literal {α} {a c : α} [CommRing α] : 
+  a + c = c + 1 * a^1 := by ring
 
 -- LiteralMul
 theorem term_derivation_literal_mul : true := by sorry
