--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
@@ -1173,7 +1173,7 @@ def h (x : ℝ) (h1 : x > (0 : ℝ)) : x + (1 : ℝ) / x ≥ (2 : ℝ) := by
     have d7 : -((2 : ℝ) * x ^ 1) = (-2 : ℝ) * x ^ 1 := by term_derivation_neg_product
     have d8 : -((2 : ℝ) * x) = (-2 : ℝ) * x ^ 1 := by term_derivation_neg_eq
     have d9 : (1 : ℝ) * x ^ 2 + (-2 : ℝ) * x ^ 1 = (0 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_product_add_product_greater
-    have d10 : x ^ 2 + (-((2 : ℝ) * x) : ℝ) = (0 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq
+    have d10 : x ^ 2 + (-((2 : ℝ) * x) : ℝ) = (0 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq d2 d8 d9
     have d11 : x ^ 2 - (2 : ℝ) * x = (0 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_sub_eqs_add_neg
     have d12 : 1 = 1 := by term_derivation_reflection
     have d13 : 1 = 1 := by term_derivation_reflection
@@ -1182,7 +1182,7 @@ def h (x : ℝ) (h1 : x > (0 : ℝ)) : x + (1 : ℝ) / x ≥ (2 : ℝ) := by
     have d16 : (0 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) = (1 : ℝ) + (-2 : ℝ) * x ^ 1 := by term_derivation_sum_add_literal
     have d17 : (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 = (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_reflection
     have d18 : (0 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 + (1 : ℝ) = (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_sum_add_literal
-    have d19 : x ^ 2 - (2 : ℝ) * x + (1 : ℝ) = (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq
+    have d19 : x ^ 2 - (2 : ℝ) * x + (1 : ℝ) = (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq d11 d12 d18
     have d20 : 0 = 0 := by term_derivation_reflection
     have d21 : 1 = 1 := by term_derivation_reflection
     have d22 : -2 = -2 := by term_derivation_reflection
@@ -1191,16 +1191,16 @@ def h (x : ℝ) (h1 : x > (0 : ℝ)) : x + (1 : ℝ) / x ≥ (2 : ℝ) := by
     have d25 : (-2 : ℝ) * x = (-2 : ℝ) * x ^ 1 := by term_derivation_non_one_literal_mul_atom
     have d26 : (-2 : ℝ) * x ^ 1 = (-2 : ℝ) * x ^ 1 := by term_derivation_mul_eq
     have d27 : (1 : ℝ) + (-2 : ℝ) * x ^ 1 = (1 : ℝ) + (-2 : ℝ) * x ^ 1 := by term_derivation_reflection
-    have d28 : (1 : ℝ) + (-2 : ℝ) * x ^ 1 = (1 : ℝ) + (-2 : ℝ) * x ^ 1 := by term_derivation_add_eq
+    have d28 : (1 : ℝ) + (-2 : ℝ) * x ^ 1 = (1 : ℝ) + (-2 : ℝ) * x ^ 1 := by term_derivation_add_eq d21 d26 d27
     have d29 : x = x := by term_derivation_reflection
     have d30 : 2 = 2 := by term_derivation_reflection
     have d31 : x ^ 2 = (1 : ℝ) * x ^ 2 := by term_derivation_non_reduced_power
     have d32 : (1 : ℝ) * x ^ 2 = (1 : ℝ) * x ^ 2 := by term_derivation_one_mul
     have d33 : (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 = (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_reflection
-    have d34 : (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 = (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq
+    have d34 : (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 = (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq d28 d32 d33
     have d35 : -(0 : ℤ) = 0 := by term_derivation_neg_literal
     have d36 : (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 + (0 : ℝ) = (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_nf_add_zero
-    have d37 : (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 + (-(0 : ℤ) : ℝ) = (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq
+    have d37 : (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 + (-(0 : ℤ) : ℝ) = (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq d34 d35 d36
     have d38 : (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 - (0 : ℝ) = (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_sub_eqs_add_neg
     have d39 : x ^ 2 - (2 : ℝ) * x + (1 : ℝ) ≥ (0 : ℝ) ↔ (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 ≥ (0 : ℝ) := by term_derivation_num_comparison
     have d40 : x = x := by term_derivation_reflection
@@ -1208,7 +1208,7 @@ def h (x : ℝ) (h1 : x > (0 : ℝ)) : x + (1 : ℝ) / x ≥ (2 : ℝ) := by
     have d42 : x ^ 2 = (1 : ℝ) * x ^ 2 := by term_derivation_non_reduced_power
     have d43 : 1 = 1 := by term_derivation_reflection
     have d44 : (1 : ℝ) * x ^ 2 + (1 : ℝ) = (1 : ℝ) + (1 : ℝ) * x ^ 2 := by term_derivation_product_add_literal
-    have d45 : x ^ 2 + (1 : ℝ) = (1 : ℝ) + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq
+    have d45 : x ^ 2 + (1 : ℝ) = (1 : ℝ) + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq d42 d43 d44
     have d46 : 2 = 2 := by term_derivation_reflection
     have d47 : x = x := by term_derivation_reflection
     have d48 : (2 : ℝ) * x = (2 : ℝ) * x ^ 1 := by term_derivation_non_one_literal_mul_atom
@@ -1219,7 +1219,7 @@ def h (x : ℝ) (h1 : x > (0 : ℝ)) : x + (1 : ℝ) / x ≥ (2 : ℝ) := by
     have d53 : x ^ 2 = (1 : ℝ) * x ^ 2 := by term_derivation_non_reduced_power
     have d54 : (1 : ℝ) * x ^ 2 = (1 : ℝ) * x ^ 2 := by term_derivation_one_mul
     have d55 : (1 : ℝ) + (1 : ℝ) * x ^ 2 = (1 : ℝ) + (1 : ℝ) * x ^ 2 := by term_derivation_reflection
-    have d56 : (1 : ℝ) + (1 : ℝ) * x ^ 2 = (1 : ℝ) + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq
+    have d56 : (1 : ℝ) + (1 : ℝ) * x ^ 2 = (1 : ℝ) + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq d50 d54 d55
     have d57 : 2 = 2 := by term_derivation_reflection
     have d58 : x = x := by term_derivation_reflection
     have d59 : x ^ 1 = x := by term_derivation_power_one
@@ -1230,7 +1230,7 @@ def h (x : ℝ) (h1 : x > (0 : ℝ)) : x + (1 : ℝ) / x ≥ (2 : ℝ) := by
     have d64 : (1 : ℝ) + (-2 : ℝ) * x ^ 1 = (1 : ℝ) + (-2 : ℝ) * x ^ 1 := by term_derivation_reflection
     have d65 : (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 = (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_reflection
     have d66 : (1 : ℝ) + (1 : ℝ) * x ^ 2 + (-2 : ℝ) * x ^ 1 = (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_sum_add_product_greater
-    have d67 : (1 : ℝ) + (1 : ℝ) * x ^ 2 + (-((2 : ℝ) * x ^ 1) : ℝ) = (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq
+    have d67 : (1 : ℝ) + (1 : ℝ) * x ^ 2 + (-((2 : ℝ) * x ^ 1) : ℝ) = (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_add_eq d56 d63 d66
     have d68 : (1 : ℝ) + (1 : ℝ) * x ^ 2 - (2 : ℝ) * x ^ 1 = (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 := by term_derivation_sub_eqs_add_neg
     have d69 : x ^ 2 + (1 : ℝ) ≥ (2 : ℝ) * x ↔ (1 : ℝ) + (-2 : ℝ) * x ^ 1 + (1 : ℝ) * x ^ 2 ≥ (0 : ℝ) := by term_derivation_num_comparison
     have d70 : x ^ 2 + (1 : ℝ) ≥ (2 : ℝ) * x := by term_derivation_non_trivial_finish
@@ -2438,7 +2438,7 @@ def h (a b : ℝ) (h1 : a > (0 : ℝ)) (h2 : b > (0 : ℝ)) : a / b + b / a ≥ 
     have d4 : a / b = (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_div_eq
     have d5 : -(2 : ℤ) = -2 := by term_derivation_neg_literal
     have d6 : (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (-2 : ℝ) = (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_product_add_literal
-    have d7 : a / b + (-(2 : ℤ) : ℝ) = (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_add_eq
+    have d7 : a / b + (-(2 : ℤ) : ℝ) = (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_add_eq d4 d5 d6
     have d8 : a / b - (2 : ℝ) = (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_sub_eqs_add_neg
     have d9 : b = b := by term_derivation_reflection
     have d10 : a = a := by term_derivation_reflection
@@ -2446,7 +2446,7 @@ def h (a b : ℝ) (h1 : a > (0 : ℝ)) (h2 : b > (0 : ℝ)) : a / b + b / a ≥ 
     have d12 : b / a = (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_div_atom
     have d13 : b / a = (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_div_eq
     have d14 : (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) = (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_reflection
-    have d15 : a / b - (2 : ℝ) + b / a = (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_add_eq
+    have d15 : a / b - (2 : ℝ) + b / a = (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_add_eq d8 d13 d14
     have d16 : 0 = 0 := by term_derivation_reflection
     have d17 : -2 = -2 := by term_derivation_reflection
     have d18 : b = b := by term_derivation_reflection
@@ -2458,7 +2458,7 @@ def h (a b : ℝ) (h1 : a > (0 : ℝ)) (h2 : b > (0 : ℝ)) : a / b + b / a ≥ 
     have d24 : b ^ (-1 : ℤ) * a ^ 1 = (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_mul_eq
     have d25 : (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) = (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_one_mul
     have d26 : (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) = (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_reflection
-    have d27 : (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) = (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_add_eq
+    have d27 : (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) = (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_add_eq d17 d25 d26
     have d28 : b = b := by term_derivation_reflection
     have d29 : b ^ 1 = b := by term_derivation_power_one
     have d30 : a = a := by term_derivation_reflection
@@ -2470,10 +2470,10 @@ def h (a b : ℝ) (h1 : a > (0 : ℝ)) (h2 : b > (0 : ℝ)) : a / b + b / a ≥ 
     have d36 : b ^ 1 * a ^ (-1 : ℤ) = (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_mul_eq
     have d37 : (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) = (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_one_mul
     have d38 : (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) = (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_reflection
-    have d39 : (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) = (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_add_eq
+    have d39 : (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) = (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_add_eq d27 d37 d38
     have d40 : -(0 : ℤ) = 0 := by term_derivation_neg_literal
     have d41 : (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) + (0 : ℝ) = (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_nf_add_zero
-    have d42 : (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) + (-(0 : ℤ) : ℝ) = (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_add_eq
+    have d42 : (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) + (-(0 : ℤ) : ℝ) = (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_add_eq d39 d40 d41
     have d43 : (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) - (0 : ℝ) = (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_sub_eqs_add_neg
     have d44 : a / b - (2 : ℝ) + b / a ≥ (0 : ℝ) ↔ (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) ≥ (0 : ℝ) := by term_derivation_num_comparison
     have d45 : a = a := by term_derivation_reflection
@@ -2487,7 +2487,7 @@ def h (a b : ℝ) (h1 : a > (0 : ℝ)) (h2 : b > (0 : ℝ)) : a / b + b / a ≥ 
     have d53 : b / a = (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_div_atom
     have d54 : b / a = (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_div_eq
     have d55 : (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) = (0 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_product_add_product_less
-    have d56 : a / b + b / a = (0 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_add_eq
+    have d56 : a / b + b / a = (0 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_add_eq d49 d54 d55
     have d57 : 2 = 2 := by term_derivation_reflection
     have d58 : b = b := by term_derivation_reflection
     have d59 : -1 = -1 := by term_derivation_reflection
@@ -2509,7 +2509,7 @@ def h (a b : ℝ) (h1 : a > (0 : ℝ)) (h2 : b > (0 : ℝ)) : a / b + b / a ≥ 
     have d75 : b ^ 1 * a ^ (-1 : ℤ) = (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_mul_eq
     have d76 : (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) = (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_one_mul
     have d77 : (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) = (0 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_product_add_product_less
-    have d78 : (0 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) = (0 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_add_eq
+    have d78 : (0 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) = (0 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_add_eq d66 d76 d77
     have d79 : -(2 : ℤ) = -2 := by term_derivation_neg_literal
     have d80 : -2 = -2 := by term_derivation_reflection
     have d81 : (0 : ℤ) + (-2 : ℤ) = -2 := by term_derivation_zero_add
@@ -2517,7 +2517,7 @@ def h (a b : ℝ) (h1 : a > (0 : ℝ)) (h2 : b > (0 : ℝ)) : a / b + b / a ≥ 
     have d83 : (0 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (-2 : ℝ) = (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) := by term_derivation_sum_add_literal
     have d84 : (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) = (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_reflection
     have d85 : (0 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) + (-2 : ℝ) = (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_sum_add_literal
-    have d86 : (0 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) + (-(2 : ℤ) : ℝ) = (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_add_eq
+    have d86 : (0 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) + (-(2 : ℤ) : ℝ) = (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_add_eq d78 d79 d85
     have d87 : (0 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) - (2 : ℝ) = (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) := by term_derivation_sub_eqs_add_neg
     have d88 : a / b + b / a ≥ (2 : ℝ) ↔ (-2 : ℝ) + (1 : ℝ) * (b ^ (-1 : ℤ) * a ^ 1) + (1 : ℝ) * (b ^ 1 * a ^ (-1 : ℤ)) ≥ (0 : ℝ) := by term_derivation_num_comparison
     have d89 : a / b + b / a ≥ (2 : ℝ) := by term_derivation_non_trivial_finish
