--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
@@ -788,7 +788,7 @@ def h (a b c : ℝ) : a ^ (2:ℕ) + b ^ (2:ℕ) + c ^ (2:ℕ) ≥ a * b + b * c 
     have d272 : ((0:ℕ) : ℝ) + ((-1:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * c ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ)) + ((0:ℕ) : ℝ) = ((0:ℕ) : ℝ) + ((-1:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * c ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ)) := by term_derivation_nf_add_zero
     have d273 : (a ^ (2:ℕ) + b ^ (2:ℕ) + c ^ (2:ℕ) - a * b - b * c - c * a - ((0:ℕ) : ℝ)) / ((1:ℕ) : ℝ) + ((-((0:ℕ) : ℤ) : ℤ) : ℝ) = ((0:ℕ) : ℝ) + ((-1:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * c ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ)) := by term_derivation_add_eq d270 d271 eq_identity_coercion eq_int_to_real_coercion d272
     have d274 : (a ^ (2:ℕ) + b ^ (2:ℕ) + c ^ (2:ℕ) - a * b - b * c - c * a - ((0:ℕ) : ℝ)) / ((1:ℕ) : ℝ) - ((0:ℕ) : ℝ) = ((0:ℕ) : ℝ) + ((-1:ℤ) : ℝ) * (b ^ (1:ℕ) * a ^ (1:ℕ)) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * a ^ (1:ℕ)) + ((1:ℕ) : ℝ) * b ^ (2:ℕ) + ((1:ℕ) : ℝ) * c ^ (2:ℕ) + ((1:ℕ) : ℝ) * a ^ (2:ℕ) + ((-1:ℤ) : ℝ) * (c ^ (1:ℕ) * b ^ (1:ℕ)) := by term_derivation_sub_eqs_add_neg d273 neg_nat_to_real_coercion
-    have d275 : (a ^ (2:ℕ) + b ^ (2:ℕ) + c ^ (2:ℕ) - a * b - b * c - c * a - ((0:ℕ) : ℝ)) / ((1:ℕ) : ℝ) - ((0:ℕ) : ℝ) := by term_derivation_expr_equivalence
+    have d275 : (a ^ (2:ℕ) + b ^ (2:ℕ) + c ^ (2:ℕ) - a * b - b * c - c * a - ((0:ℕ) : ℝ)) / ((1:ℕ) : ℝ) - ((0:ℕ) : ℝ) := by term_derivation_expr_equivalence d193 d274
     have d276 : a ^ (2:ℕ) + b ^ (2:ℕ) + c ^ (2:ℕ) - a * b - b * c - c * a ≥ ((0:ℕ) : ℝ) := by litnum_bound_derivation_finish
     assumption
   have h6 : a ^ (2:ℕ) + b ^ (2:ℕ) + c ^ (2:ℕ) ≥ a * b + b * c + c * a := by
